Update_Auth
